# janitor-rs

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml  release.yml
src/: bin_search_ge.rs  bin_search_gt.rs  bin_search_le.rs  bin_search_lt.rs  comp.rs  comp_ends.rs  comp_first.rs  comp_first_ends.rs  comp_first_starts.rs  comp_ne.rs  comp_ne_1st.rs  comp_ne_1st_ends.rs  comp_ne_1st_starts.rs  comp_ne_ends.rs  comp_ne_ends_1st.rs  comp_ne_starts.rs  comp_ne_starts_1st.rs  comp_no_range.rs  comp_no_range_ne.rs  comp_posns.rs  comp_posns_ne.rs  comp_starts.rs  index_builder.rs  left_le_right.rs  lib.rs  max_ends.rs  max_ends_matches.rs  max_positions.rs  max_starts.rs  max_starts_ends_matches.rs  min_ends.rs  min_ends_matches.rs  min_positions.rs  min_starts.rs  min_starts_ends.rs  min_starts_ends_matches.rs  prod_ends.rs  prod_ends_matches.rs  prod_positions.rs  prod_starts.rs  (+8 more)
src/aggs/: max_starts.rs  max_starts_matches.rs  min_starts.rs  min_starts_matches.rs  mod.rs  prod_starts.rs  sum_positions.rs  sum_starts_matches.rs
src/bin_search/: bin_search_ge.rs  bin_search_ge_first.rs  bin_search_ge_regions.rs  bin_search_gt.rs  bin_search_gt_first.rs  bin_search_gt_regions.rs  bin_search_le.rs  bin_search_le_first.rs  bin_search_lt.rs  bin_search_lt_first.rs  mod.rs
src/compare/: comp.rs  comp_ends.rs  comp_first.rs  comp_first_ends.rs  comp_first_starts.rs  comp_ne.rs  comp_ne_1st.rs  comp_ne_ends.rs  comp_ne_ends_1st.rs  comp_ne_starts.rs  comp_ne_starts_1st.rs  comp_no_range.rs  comp_no_range_ne.rs  comp_posns.rs  comp_posns_ne.rs  comp_starts.rs  mod.rs
(+69 files in other folders)
